--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>WeatherApp</title>
     <link rel="stylesheet" href="main.css"/>
 
 </head>
 <body>
    <div class="app-wrap">
-       Hello
+       
        <header>
            <input type="text" autocomplete="off" class="search-box"
-           placeholder="Search for a city..." />
+           placeholder="Ia zi unde mergem" />
        </header>
        <main>
            <section class="location">
@@ -22,6 +22,7 @@
            <div class="current">
                <div class="temp">15<span>°C</span></div>
                <div class="weather">Sunny</div>
+               
                <div class="hi-low">13°C / 16°C</div>
            </div>
        </main>
