--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        
        <header>
            <input type="text" autocomplete="off" class="search-box"
-           placeholder="Ia zi unde mergem" />
+           placeholder="Alege oraș" />
        </header>
        <main>
            <section class="location">
